First set of edits

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Bashir Mohammed, PhD.</title>
+    <title>Oluwamayowa Amusat, PhD.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Bashir Mohammed - Resume / CV / vCard" />
+    <meta name="description" content="Oluwamayowa Amusat - Resume / CV / vCard" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
     <meta name="author" content="lmpixels" />
     <link rel="shortcut icon" href="favicon.ico">
@@ -49,8 +49,8 @@
             <!-- Text Logo -->
             <div class="text-logo">
               <a href="index.html">
-                <div class="logo-symbol">BM</div>
-                <div class="logo-text">Bashir <span>Mohammed</span></div>
+                <div class="logo-symbol">OA</div>
+                <div class="logo-text">Oluwamayowa <span>Amusat</span></div>
               </a>
             </div>
             <!-- /Text Logo -->
@@ -113,36 +113,36 @@
                         <div class="col-sm-12 col-md-7 col-lg-7">
                           <div class="home-text hp-left">
                               
-                            <h1>Bashir Mohammed, PhD.</h1>
+                            <h1>Oluwamayowa Amusat, Ph.D.</h1>
                             <div class="owl-carousel text-rotation">                                    
                               <div class="item">
-                                <h4>Scientific Data Management Research Group(SDM)</h4>
+                                <h4>Integrated Data Frameworks (IDF) Group</h4>
                               </div>
 
                               <div class="item">
-                                <h4>Computaional Research Division (CRD) Lawrence Berkeley <br>National Laboratory Berkeley, California USA.</h4>
+                                <h4>Computational Research Division (CRD) <br> Lawrence Berkeley National Laboratory <br> Berkeley, California USA.</h4>
                               </div>
                             </div>
-                            <p>Computational Research Division<br> 
+                            <p>Computational Research Division.<br> 
                               Lawrence Berkeley National Laboratory.<br>
                               One Cyclotron Road,<br>
-                              50B-3233B <br>
+                              50B-2270A <br>
                               Berkeley, CA 94720 US.<br>
-                              bmohammed@lbl.gov<br>
-                              <a href="https://scholar.google.co.uk/citations?user=iHnh_kp2JOgC&hl=en">
+                              ooamusat@lbl.gov<br>
+                              <a href="https://scholar.google.com/citations?user=NLYcMHkAAAAJ&hl=en&oi=ao">
                                 <!-- <i class="fa fa-google" style="font-size:20px; color:red;"></i> -->
                                 Google Scholar
-                              </a> | <a href="https://www.linkedin.com/in/bashir-mohammed-phd-b9a62362/">
+                              </a> | <a href="https://uk.linkedin.com/in/oluwamayowa-amusat">
                                 <!-- <i class="linecons linecons-megaphone"></i> -->
                                 LinkedIn
-                              </a> | <a href="https://twitter.com/BashirMohd100">
+                              </a> | <a href="https://orcid.org/0000-0002-4569-5729">
                                 <!-- <i class="linecons linecons-display"></i> -->
-                                Twitter
+                                ORCID
                               </a>
                             </p>
                                  
                             <div class="home-buttons">
-                              <a href="Bashir_Mohd_CV.pdf" target="_blank" class="btn btn-primary">Download CV</a>
+                              <a href="ooamusat.pdf" target="_blank" class="btn btn-primary">Download CV</a>
                               <!-- <a href="#" target="_self" class="btn btn-secondary">Contact</a> -->
                             </div>
                           </div>
