--- a/index.html
+++ b/index.html
@@ -123,11 +123,12 @@
                                 <h4>Computational Research Division (CRD) <br> Lawrence Berkeley National Laboratory <br> Berkeley, California USA.</h4>
                               </div>
                             </div>
-                            <p>Computational Research Division.<br> 
-                              Lawrence Berkeley National Laboratory.<br>
-                              One Cyclotron Road,<br>
+                            <p>Computational Research Division<br> 
+                              Lawrence Berkeley National Laboratory<br>
+                              One Cyclotron Road<br>
                               50B-2270A <br>
-                              Berkeley, CA 94720 US.<br>
+                              Berkeley, CA 94720<br>
+                              United States <br>
                               ooamusat@lbl.gov<br>
                               <a href="https://scholar.google.com/citations?user=NLYcMHkAAAAJ&hl=en&oi=ao">
                                 <!-- <i class="fa fa-google" style="font-size:20px; color:red;"></i> -->
@@ -174,8 +175,7 @@
       
                         <div class="ci-text">
                           <!-- <h4>Copywrite</h4> -->
-                          <p>I am a post-doctoral research scholar in the Computational Research Division(CRD) working on the <a href="https://sites.google.com/lbl.gov/daphne/home?authuser=0" target="new"> Deep Learning and Artificial Intelligence High-Performance Networks(DAPHNE)</a> project under the supervision of <a href="http://es.net/about/esnet-staff/advanced-network-technologies/mariam-kiran/" target="new"> Mariam Kiran </a> of Energy Sciences Network(Esnet) and <a href="https://crd.lbl.gov/departments/data-science-and-technology/sdm/staff/wu/" target="new"> John Wu</a>  at Berkeley Lab. I received my (MSc) in <a href="https://www.sheffield.ac.uk/acse/current/masters/controlsystems/index" target="new">Control Systems Engineering</a> under the supervision of <a href="https://en.wikipedia.org/wiki/Peter_J._Fleming" target="new">Professor Peter J Fleming</a> from the  <a href="http://www.sheffield.ac.uk/" target="new">University of Sheffield,</a> and a PhD in Computer Science from the  <a href="http://www.bradford.ac.uk/external/" target="new">University of Bradford</a> in the United Kingdom under the supervision of <a href="https://www.bradford.ac.uk/staff/iuawan" target="new">Professor Irfan Awan</a> and <a href="https://www.bradford.ac.uk/staff/hugail" target="new">Professor Hassan Ugail</a>. I am currently developing AI and Machine Learning algorithms to control high-speed networks such as to avoid data traffic congestion, degraded network performance and network downtime for important Science Bigfile Transfers and experiments.
-                            My method will lead to minimizing network downtime, save US department of Energy (DOE) millions of dollars on equipment cost, and free engineers to work on science experiments. My research contributed to the core network research and operations with my strong background in HPC and cloud where I developed and built these infrastructures during my PhD (<a href="https://www.bradford.ac.uk/news/archive/2016/bradford-computer-scientists-on-cloud-nine.php" target="new">Bradstack</a>).
+                          <p>I am a post-doctoral research scholar in the Computational Research Division(CRD) working on the DOE-funded <a href="https://idaes.org/" target="new"> IDAES </a> and <a href="https://www.nawihub.org/about" target="new"> NAWI </a> projects under the supervision of <a href="https://crd.lbl.gov/departments/data-science-and-technology/idf/staff/daniel-gunter/" target="new"> Dan Gunter  </a> at Berkeley Lab. I have a  Masters degree in <a href="https://courses.leeds.ac.uk/i239/advanced-chemical-engineering-msc" target="new">Advanced Chemical Engineering</a> from the <a href="https://www.leeds.ac.uk/" target="new">University of Leeds,</a> and a PhD. in Chemical Engineering from <a href="https://www.ucl.ac.uk/" target="new">University College London (UCL) </a>, where I worked under the supervision of <a href="https://www.ucl.ac.uk/chemical-engineering/people/prof-eric-fraga" target="new">Professor Eric S. Fraga</a> and <a href="https://www.ucl.ac.uk/chemical-engineering/people/dr-paul-shearing" target="new">Professor Paul Shearing</a> in the <a href="https://www.ucl.ac.uk/chemical-engineering/research/research-groups/product-and-process-systems-engineering" target="new">Product and Process Systems Engineering (PPSE)</a> research group. I am currently working on developing equation-oriented surrogate modelling tools to aid in the design and optimization of advanced energy and water desalination systems. The tools provide a way for important legacy simulations and pilot-stage energy generation and water purification technologies to be integrated into the IDAES PSE framework for techno-economic analysis and performance optimization. This work builds on my <a href="https://discovery.ucl.ac.uk/id/eprint/1566604/16/Amusat,O.O._revised_thesis.pdf" target="new"> previous (PhD) research </a> which focused on the design and optimization of off-grid hybrid renewable energy systems under renewables variability.
                             </p>
 
                             <h4>Research Interest</h4>
