--- a/index.html
+++ b/index.html
@@ -179,17 +179,13 @@
                             </p>
 
                             <h4>Research Interest</h4>
-                          <p>My research is focused on enabling the design of intelligent networks that allows improved reliability for exascale scientific workflows.
-                          I am working on building robust networks through the use of machine‐learning‐based approaches, cloud computing, and software‐defined networks (SDN). This couples deep learning methods with SDN for predicting real‐time network behaviour, avoiding data traffic congestion and degraded network performance.
-                          My research interest lies at the intersection between network systems, control systems, and machine learning..</p>
+                          <p>My research interests lie in the area of computer-aided process engineering: the incorporation of the latest advances in modelling, optimization, machine learning and decision support techniques to the improvement and enhancement of process systems. I am currently working on developing data-driven modelling and machine learning techniques to support the design of advanced energy and water desalination systems. The work is part of the DOE-funded IDAES Project and explores the interface between machine learning, operations research and process systems engineering.
+                          My research interest lies at the intersection between machine learning, operations research and process systems engineering.</p>
                           <h4>My current research interest</h4>
                           <ul>
-                            <p></p><li>Real-time Machine Learning Control and Reinforcement Learning in High Speed Networks</li><p></p>
-                            <p></p><li>Deep Reinforcement Learning in High Speed Networks</li><p></p>
-                            <p></p><li>Developing Machine Learning algorithm for large-scale distributed networks </li><p></p>
-                            <p></p><li>Failure Prediction and Performance related issues on Cloud and HPC systems</li><p></p>
-                            <p></p><li>Cloud Platform implementation (<a href="https://www.chameleoncloud.org/" target="new">Chameleon Cloud</a>, <a href="https://www.geni.net//" target="new">GENI (Global Environment for Network Innovations)</a>, <a href="https://www.openstack.org/" target="new">Openstack</a>, <a href="https://aws.amazon.com/" target="new">AWS</a>, <a href="https://azure.microsoft.com/en-us/free/?&wt.mc_id=AID_SEM_" target="new">Microsoft Azure</a>, <a href="https://cloud.google.com/?utm_source=google&utm_medium=cpc&utm_campaign=2015-q1-cloud-emea-gcp-bkws-freetrial-en&gclid=CjwKEAiAkajDBRCRq8Czmdj-yFgSJADikZgglIPUtplYqW5bYu00onDbTK-RT2SlWAUIyUcobJV_3hoCsC3w_wcB&dclid=CLrm7s6Vo9ECFZmMdwodIDcASQ" target="new">Google Cloud Platform</a>)</li><p></p>
-                            <p></p><li>Automatic Control systems</li><p></p>
+                            <p></p><li>currently working on developing data-driven modelling and machine learning techniques to support the design of advanced energy and water desalination systems</li><p></p>
+                            <p></p><li>Working on a DOE-funded IDAES Project and explores the interface between machine learning, operations research and process systems engineering.</li><p></p>
+>
                           </ul>
                         </div>
                       </div>
