--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </li>
 
                 <li class="menu-item">
-                  <a href="media.html">Media</a>
+                  <a href=</a>
                 </li>
               </ul>
             </div>
