--- a/publications.html
+++ b/publications.html
@@ -66,20 +66,14 @@
                 </li>
 
                 <li class="menu-item">
-                  <a href="projects.html">Projects</a>
+                  <a href="talks.html">Presentations</a>
                 </li>
 
                 <li class="menu-item">
                   <a href="awards.html">Awards</a>
                 </li>
 
-                <li class="menu-item">
-                  <a href="talks.html">Talks</a>
-                </li>
 
-                <li class="menu-item">
-                  <a href="media.html">Media</a>
-                </li>
               </ul>
             </div>
 
