--- a/index.html
+++ b/index.html
@@ -65,22 +65,16 @@
                 <li class="menu-item">
                   <a href="publications.html">Publications</a>
                 </li>
-
+                  
                 <li class="menu-item">
-                  <a href="projects.html">Projects</a>
+                  <a href="talks.html">Presentations</a>
                 </li>
 
                 <li class="menu-item">
                   <a href="awards.html">Awards</a>
                 </li>
 
-                <li class="menu-item">
-                  <a href="talks.html">Talks</a>
-                </li>
 
-                <li class="menu-item">
-                  <a href=</a>
-                </li>
               </ul>
             </div>
 
