--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
                               </div>
 
                               <div class="item">
-                                <h4>Computational Research Division (CRD) <br> Lawrence Berkeley National Laboratory <br> Berkeley, California USA.</h4>
+                                <h4>Scientific Data (SciData) Division <br> Lawrence Berkeley National Laboratory <br> Berkeley, California USA.</h4>
                               </div>
                             </div>
-                            <p>Computational Research Division<br> 
+                            <p>Computational Sciences Research Area<br> 
                               Lawrence Berkeley National Laboratory<br>
-                              One Cyclotron Road<br>
+                              1 Cyclotron Road<br>
                               50B-2270A <br>
                               Berkeley, CA 94720<br>
                               United States <br>
