--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
                           <!-- <h4>Copywrite</h4> -->
                           <ul>
                                                             
-                              <p></p><li><b>Session Chair</b>, Computational Optimization and Software, INFORMS Annual meeting, Indianaplis, U.S.A, 2022. </li><p></p>
+                              <p></p><li><b>Session Chair</b>, Computational Optimization and Software, <a href="https://meetings.informs.org/wordpress/indianapolis2022/" target="new">INFORMS Annual meeting</a>, Indianapolis, U.S.A, 2022. </li><p></p>
+
+                              <p></p><li><b>Reviewer</b>, <a href="https://www.journals.elsevier.com/renewable-energy-focus" target="new"> Renewable Energy Focus, 2022 - Present.  </a></li><p></p>
 
                              <p></p><li><b>Reviewer</b>, <a href="https://www.journals.elsevier.com/environmental-technology-and-innovation" target="new"> Environmental Technology and Innovation, 2020 - Present.  </a></li><p></p>
                               
