--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <h4>Scientific Data (SciData) Division <br> Lawrence Berkeley National Laboratory <br> Berkeley, California USA.</h4>
                               </div>
                             </div>
-                            <p>Computational Sciences Research Area<br> 
+                            <p>Computing Sciences Research Area<br> 
                               Lawrence Berkeley National Laboratory<br>
                               1 Cyclotron Road<br>
                               50B-2270A <br>
