--- a/publications.html
+++ b/publications.html
@@ -213,6 +213,38 @@
                 <!-- /Services -->
 
 
+                <!-- Services -->
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12">
+                    <div class="p-10"></div>
+
+                    <div class="block-title">
+                      <h2>Technical Reports</h2>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12">
+                    <div class="info-list-w-icon">
+                      <div class="info-block-w-icon">
+                        <!-- <div class="ci-icon">
+                          <i class="linecons linecons-pen"></i>
+                        </div> -->
+      
+                        <div class="ci-text">
+                          <!-- <h4>Copywrite</h4> -->
+                          <ul>     
+                          <p></p><li>Dan Gunter, <b>Oluwamayowa Amusat</b>, Timothy Bartholomew, Markus Drouven. <a href="https://escholarship.org/uc/item/3zj7z3jj">Santa Barbara Desalination Digital Twin Technical Report.  </a> <em>Lawrence Berkeley National Laboratory.</em>, Report #: LBNL-2001437, 2022. </li><p></p>    
+
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- /Services -->
+
                 <!-- /Services -->
 
               </div>
