--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       
                         <div class="ci-text">
                           <!-- <h4>Copywrite</h4> -->
-                           My research interests lie in the area of computer-aided process engineering: the incorporation of the latest advances in modelling, optimization, machine learning and decision support techniques to the improvement and enhancement of process systems. I am currently working on developing data-driven modelling and machine learning techniques to support the design of advanced energy and water desalination systems. These efforts are part of the DOE-funded IDAES and NAWI projects and explores the interface between machine learning, operations research and process systems engineering.<p></p>
+                           My research interests lie in the area of computer-aided process engineering: the incorporation of the latest advances in modelling, optimization, machine learning and decision support techniques to the improvement and enhancement of process systems. I am currently working on developing data-driven modelling and machine learning techniques to support the design of advanced energy and water desalination systems. These efforts are part of the DOE-funded IDAES and NAWI projects and explore the interface between machine learning, operations research and process systems engineering.<p></p>
                                
 
                           </ul>
