--- a/publications.html
+++ b/publications.html
@@ -235,7 +235,7 @@
                         <div class="ci-text">
                           <!-- <h4>Copywrite</h4> -->
                           <ul>     
-                          <p></p><li>Dan Gunter, <b>Oluwamayowa Amusat</b>, Timothy Bartholomew, Markus Drouven. <a href="https://escholarship.org/uc/item/3zj7z3jj">Santa Barbara Desalination Digital Twin Technical Report.  </a> <em>Lawrence Berkeley National Laboratory.</em>, Report #: LBNL-2001437, 2022. </li><p></p>    
+                          <p></p><li>Dan Gunter, <b>Oluwamayowa Amusat</b>, Timothy Bartholomew, Markus Drouven. <a href="https://escholarship.org/uc/item/3zj7z3jj">Santa Barbara Desalination Digital Twin Technical Report.  </a> <em>Report No: LBNL-2001437</em>, Lawrence Berkeley National Laboratory, 2022. </li><p></p>    
 
                           </ul>
                         </div>
