--- a/publications.html
+++ b/publications.html
@@ -219,7 +219,7 @@
                     <div class="p-10"></div>
 
                     <div class="block-title">
-                      <h2>Technical Reports</h2>
+                      <h2>Software, Technical Reports and Other Products</h2>
                     </div>
                   </div>
                 </div>
@@ -235,7 +235,10 @@
                         <div class="ci-text">
                           <!-- <h4>Copywrite</h4> -->
                           <ul>     
-                          <p></p><li>Dan Gunter, <b>Oluwamayowa Amusat</b>, Timothy Bartholomew, Markus Drouven. <a href="https://escholarship.org/uc/item/3zj7z3jj">Santa Barbara Desalination Digital Twin Technical Report.  </a> <em>Report No: LBNL-2001437</em>, Lawrence Berkeley National Laboratory, 2022. </li><p></p>    
+                          
+                          s<p></p><li>Beattie, Keith S, Gunter, Daniel, Knueven, Ben, Lee, Andrew, Ladshaw, Austin, Drouven, Markus, Bartholomew, Tim, Bi, Xiangyu, Bianchi, Ludovico, Arnold, Travis, Atia, Adam, Wang, Chenyu, Miara, Ariel, Kurban, Sitterley, Allu, Srikanth, Dudchenko, Alexander, <b>Amusat, Oluwamayowa</b>, Kinshuk, Panda, Young, Ethan, California Energy Commission, National Alliance for Water Innovation, and USDOE. <a href="https://www.osti.gov//servlets/purl/1785311. "> WaterTAP v1.0.0. Computer software.</a> California Energy Commission; National Alliance for Water Innovation; USDOE. 7 May. 2021. Web. doi:10.11578/dc.20210527.7. </li><p></p> 
+
+                          <p></p><li>Dan Gunter, <b>Oluwamayowa Amusat</b>, Timothy Bartholomew, Markus Drouven. <a href="https://escholarship.org/uc/item/3zj7z3jj">Santa Barbara Desalination Digital Twin Technical Report.  </a> <em>Report No: LBNL-2001437</em>, Lawrence Berkeley National Laboratory, 2022.</li><p></p>    
 
                           </ul>
                         </div>
