update with informs info

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         
                         <div class="col-sm-12 col-md-5 col-lg-5">
                           <div class="home-photo">
-                            <div class="hp-inner" style="background-image: url(img/main_photo2.jpg);">
+                            <div class="hp-inner" style="background-image: url(img/main_photo3.jpg);">
                             </div>
                           </div>
                         </div>
@@ -110,7 +110,7 @@
                             <h1>Oluwamayowa Amusat, Ph.D.</h1>
                             <div class="owl-carousel text-rotation">                                    
                               <div class="item">
-                                <h4>Integrated Data Frameworks (IDF) Group</h4>
+                                <h4>Usable Data Systems Group</h4>
                               </div>
 
                               <div class="item">
@@ -288,8 +288,12 @@
                         <div class="ci-text">
                           <!-- <h4>Copywrite</h4> -->
                           <ul>
-                                                            
-                              <p></p><li><b>Session Organizer & Chair</b>, Computational Optimization and Software, <a href="https://meetings.informs.org/wordpress/indianapolis2022/" target="new">INFORMS Annual meeting</a>, Indianapolis, U.S.A, 2022. </li><p></p>
+
+                              <p></p><li><b>Session Chair</b>, Computational Optimization and Software for PSE and Grid Applications, <a href="https://meetings.informs.org/wordpress/indianapolis2022/" target="new">INFORMS Annual meeting</a>, Indianapolis, U.S.A, 2022. </li><p></p>
+
+                              <p></p><li><b>Session Organizer</b>, Computational Optimization and Software for PSE and Grid Applications, <a href="https://meetings.informs.org/wordpress/indianapolis2022/" target="new">INFORMS Annual meeting</a>, Indianapolis, U.S.A, 2022. </li><p></p>
+
+                              <p></p><li><b>Reviewer</b>, <a href="https://www.nature.com/srep/" target="new"> Scientific Reports, 2022 - Present.  </a></li><p></p>
 
                               <p></p><li><b>Reviewer</b>, <a href="https://www.journals.elsevier.com/renewable-energy-focus" target="new"> Renewable Energy Focus, 2022 - Present.  </a></li><p></p>
 
