Update talks and publications list

--- a/talks.html
+++ b/talks.html
@@ -121,7 +121,9 @@
                         <div class="ci-text">
                           <!-- <h4>Copywrite</h4> -->
                           <ul>
-                              
+
+                              <p></p><li>"Cost-Optimization of process-scale desalination systems incorporating surrogate-based water chemistry models", <b>Speaker</b>, <em> 2024 INFORMS Optimization Society Conference </em>, Houston, Texas, USA, March 2024.</li><p></p>
+
                               <p></p><li>"Cost optimization of desalination systems using WaterTAP incorporating detailed water chemistry models", <b>Speaker</b>, <em> 2022 INFORMS Annual Meeting</em>, Indianapolis, USA, October 2022.</li><p></p>
 
                               <p></p><li><a href="https://www.youtube.com/watch?v=npBnuRIHpHI" target="new"> "Data-driven models for equation-oriented optimization”, </a><em>Berkeley Lab Postdoctoral Symposium</em>, 2021.</li><p></p>
