--- a/publications.html
+++ b/publications.html
@@ -120,6 +120,8 @@
                         <div class="ci-text">
                           <!-- <h4>Copywrite</h4> -->
                           <ul>
+                              <p></p><li><b>Oluwamayowa O. Amusat</b>, Adam A. Atia, Alexander V. Dudchenko, and Timothy V. Bartholomew*. <a href="https://doi.org/10.1021/acsestengg.3c00537"> Modeling Framework for Cost Optimization of Process-Scale Desalination Systems with Mineral Scaling and Precipitation. </a> <em>ACS ES&T Engineering</em>, Mar 2024. </li><p></p>
+
                               <p></p><li>Mohammed A. Alhussaini, Zachary M. Binger, Bianca M. Souza-Chaves, <b>Oluwamayowa O. Amusat</b>, Jangho Park, Timothy V. Bartholomew, Dan Gunter, and Andrea Achilli. <a href="https://doi.org/10.1016/j.jwpe.2023.103761"> Analysis of backwash settings to maximize net water production in an engineering-scale ultrafiltration system for water reuse. </a> <em>Journal of Water Process Engineering</em>, 53, July 2023. </li><p></p>
                               
                               <p></p><li><b>Oluwamayowa O. Amusat</b>, Paul R. Shearing, and Eric S. Fraga. <a href="https://doi.org/10.1016/j.est.2017.12.003"> Optimal design of energy systems incorporating stochastic renewable resources fluctuations. </a> <em>Journal of Energy Storage</em>, 15 : 379 - 399, Feb 2018. </li><p></p>
