--- a/publications.html
+++ b/publications.html
@@ -166,8 +166,8 @@
                           <!-- <h4>Copywrite</h4> -->
                           <ul>
 
-                             <p></p><li></li>J. A. Welsman, G. H. Weber, <b>O. O. Amusat</b>, A. Giannakou and L. Ramakrishnan. <a href="https://doi.org/10.1109/SCW63240.2024.00016"> Enhancing Electron Microscopy Image Classification Using Data Augmentation</a>. <em>SC24-W: Workshops of the International Conference for High Performance Computing, Networking, Storage and Analysis</em>, Atlanta, GA. pp. 64-71. IEEE, 2024.</li><p></p>
-                             
+                             <p></p><li>J. A. Welsman, G. H. Weber, <b>O. O. Amusat</b>, A. Giannakou and L. Ramakrishnan. <a href="https://doi.org/10.1109/SCW63240.2024.00016"> Enhancing Electron Microscopy Image Classification Using Data Augmentation</a>. <em>SC24-W: Workshops of the International Conference for High Performance Computing, Networking, Storage and Analysis</em>, Atlanta, GA. pp. 64-71. IEEE, 2024.</li><p></p>
+
                              <p></p><li><b>Oluwamayowa O. Amusat</b>, Alexander V. Dudchenko, Adam A. Atia, and Timothy Bartholomew. <a href="https://doi.org/10.69997/sct.143335"> Cost-optimal Selection of pH Control for Mineral Scaling Prevention in High Recovery Reverse Osmosis Desalination</a>. <em>Proceedings of the 10th International Conference on the Foundations of Computer-Aided Process Design (FOCAPD)</em>, Colorado, USA, July 2024.</li><p></p>
 
                              <p></p><li>Alexander V. Dudchenko and <b>Oluwamayowa O. Amusat</b>. <a href="https://doi.org/10.69997/sct.107047"> Neural Networks for Prediction of Complex Chemistry in Water Treatment Process Optimization</a>. <em>Proceedings of the 10th International Conference on the Foundations of Computer-Aided Process Design (FOCAPD)</em>, Colorado, USA, July 2024.</li><p></p>
