--- a/publications.html
+++ b/publications.html
@@ -165,6 +165,10 @@
                           <!-- <h4>Copywrite</h4> -->
                           <ul>
 
+                             <p></p><li>S. Burroughs, B. Lincoln, A. Adeel, I. Severinsen, A. Lee, <b>O. Amusat</b>, D. Gunter, B. Nicholson, M. Apperley, B. Young, J. Siirola, T. G. Walmsley <a href="https://doi.org/10.69997/sct.156838"> New Directions and Software Tools Within the Process Systems Engineering Ecosystem</a>. <em>Proceedings of the 35th European Symposium on Computer Aided Process Engineering (ESCAPE35)</em>, Ghent, Belgium. Syst Control Trans 4:430-436, July 2025</li><p></p>
+
+                             <p></p><li>Chris A. Laliwala, <b>Oluwamayowa O. Amusat</b>, Ana I. Torres. <a href="https://doi.org/10.69997/sct.132742"> An Optimization-Based Law of Mass Action Precipitation/Dissolution Model</a>. <em>Proceedings of the 35th European Symposium on Computer Aided Process Engineering (ESCAPE35)</em>, Ghent, Belgium. Syst Control Trans 4:2140-2145, July 2025</li><p></p>
+
                              <p></p><li>J. A. Welsman, G. H. Weber, <b>O. O. Amusat</b>, A. Giannakou and L. Ramakrishnan. <a href="https://doi.org/10.1109/SCW63240.2024.00016"> Enhancing Electron Microscopy Image Classification Using Data Augmentation</a>. <em>SC24-W: Workshops of the International Conference for High Performance Computing, Networking, Storage and Analysis</em>, Atlanta, GA. pp. 64-71. IEEE, 2024.</li><p></p>
 
                              <p></p><li><b>Oluwamayowa O. Amusat</b>, Alexander V. Dudchenko, Adam A. Atia, and Timothy Bartholomew. <a href="https://doi.org/10.69997/sct.143335"> Cost-optimal Selection of pH Control for Mineral Scaling Prevention in High Recovery Reverse Osmosis Desalination</a>. <em>Proceedings of the 10th International Conference on the Foundations of Computer-Aided Process Design (FOCAPD)</em>, Colorado, USA, July 2024.</li><p></p>
