--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 </li>
 
                 <li class="menu-item">
+                  <a href="pysmo.html">PySMO</a>
+                </li>
+
+                <li class="menu-item">
                   <a href="awards.html">Awards</a>
                 </li>
 
