fix page headers

--- a/awards.html
+++ b/awards.html
@@ -69,6 +69,10 @@
                   <a href="talks.html">Presentations</a>
                 </li>
 
+                <li class="menu-item">
+                  <a href="pysmo.html">PySMO</a>
+                </li>
+
                 <li class="menu-item current-menu-item">
                   <a href="awards.html">Awards</a>
                 </li>
