--- a/publications.html
+++ b/publications.html
@@ -70,6 +70,10 @@
                 </li>
 
                 <li class="menu-item">
+                  <a href="pysmo.html">PySMO</a>
+                </li>
+
+                <li class="menu-item">
                   <a href="awards.html">Awards</a>
                 </li>
 
