--- a/pysmo.html
+++ b/pysmo.html
@@ -65,8 +65,12 @@
                   <a href="publications.html">Publications</a>
                 </li>
 
-                <li class="menu-item current-menu-item">
+                <li class="menu-item">
                   <a href="talks.html">Presentations</a>
+                </li>
+
+                <li class="menu-item current-menu-item">
+                  <a href="pysmo.html">PySMO</a>
                 </li>
 
                 <li class="menu-item">
@@ -105,7 +109,7 @@
                     <div class="p-10"></div>
 
                     <div class="block-title">
-                      <h2> Research Works Using PySMO </h2>
+                      <h2> Research Using PySMO </h2>
                     </div>
                   </div>
                 </div>
