--- a/media.html
+++ b/media.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Bashir Mohammed, PhD.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="description" content="Bashir Mohammed - Resume / CV / vCard" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
     <meta name="author" content="lmpixels" />
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="css/owl.carousel.css" type="text/css">
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    
+    <!-- Responsive Enhancements CSS -->
+    <link rel="stylesheet" href="css/responsive-enhancements.css" type="text/css">
 
     <script src="js/modernizr.custom.js"></script>
   </head>
@@ -226,5 +229,6 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/validator.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/responsive-menu.js"></script>
   </body>
 </html>
