Fix indentation bugs

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     
     <!-- Responsive Enhancements CSS -->
     <link rel="stylesheet" href="css/responsive-enhancements.css" type="text/css">
+    
+    <!-- Typography and Alignment Improvements CSS -->
+    <link rel="stylesheet" href="css/typography-improvements.css" type="text/css">
 
     <script src="js/modernizr.custom.js"></script>
   </head>
