--- a/pysmo.html
+++ b/pysmo.html
@@ -108,7 +108,7 @@
           <div id="main-content" class="single-page-content">
             <div id="primary" class="content-area">   
 
-            <div class="page-title" style="text-align: center; padding: 40px 70px;">
+            <div class="page-title" style="text-align: center; padding: 40px 0;">
                 <h1>Python-based Surrogate Modeling Objects (PySMO) </h1>
                 <div class="page-subtitle">
                     <!-- <h4> 8 Years of Experience</h4> -->
