--- a/publications.html
+++ b/publications.html
@@ -137,7 +137,11 @@
                         <div class="ci-text">
                           <!-- <h4>Copywrite</h4> -->
                           <ul>
-                              <p></p><li><b>Oluwamayowa O. Amusat</b>, Adam A. Atia, Alexander V. Dudchenko, and Timothy V. Bartholomew*. <a href="https://doi.org/10.1021/acsestengg.3c00537"> Modeling Framework for Cost Optimization of Process-Scale Desalination Systems with Mineral Scaling and Precipitation. </a> <em>ACS ES&T Engineering</em>, Mar 2024. </li><p></p>
+                              <p></p><li>Chris Laliwala, <b>Oluwamayowa O. Amusat</b>, Akintomiwa Ojo, Alejandro Garciadiego, Thomas Tarka, Debangsu Bhattacharyya, and Ana I Torres. <a href="https://doi.org/10.1002/aic.70208"> Design and optimization of processes for recovering rare earth elements from end-of-life permanent magnets. </a> <em>AIChE Journal</em>, Feb 2026. </li><p></p>
+
+                              <p></p><li>Carson I Tucker, <b>Oluwamayowa O. Amusat</b>, Adam A. Atia, Alexander V. Dudchenko, Timothy V. Bartholomew, and Meagan S Mauter. <a href="https://doi.org/10.1016/j.desal.2025.119698"> Incorporating corrosion design constraints in desalination process optimization: A case study in mechanical vapor compression. </a> <em>Desalination</em>, Mar 2026. </li><p></p>
+
+                              <p></p><li><b>Oluwamayowa O. Amusat</b>, Adam A. Atia, Alexander V. Dudchenko, and Timothy V. Bartholomew. <a href="https://doi.org/10.1021/acsestengg.3c00537"> Modeling Framework for Cost Optimization of Process-Scale Desalination Systems with Mineral Scaling and Precipitation. </a> <em>ACS ES&T Engineering</em>, Mar 2024. </li><p></p>
 
                               <p></p><li><b>Oluwamayowa O. Amusat</b>, H. Hegde, C. Mungall, A. Giannakou, N. P. Byers, D. Gunter, K. Fagnan, L. Ramakrishnan. <a href="https://academic.oup.com/database/article/doi/10.1093/database/baae093/7780645"> Automated annotation of scientific texts for ML-based keyphrase extraction and validation</a>, <em>Journal of Databases and Curation</em>, Sept 2024. </li><p></p>
 
