--- a/pysmo.html
+++ b/pysmo.html
@@ -177,6 +177,8 @@
                           <!-- <h4>Copywrite</h4> -->
                           <ul>
 
+                              <p></p><li>C. I Tucker, O. O. Amusat, A. A. Atia, A. V. Dudchenko, T. V. Bartholomew, and M. S Mauter. <a href="https://doi.org/10.1016/j.desal.2025.119698"> Incorporating corrosion design constraints in desalination process optimization: A case study in mechanical vapor compression. </a> <em>Desalination</em>, 2026. </li><p></p>
+
                               <p></p><li>HA Pedrozo, MA Zamarripa, A Uribe-Rodríguez, G Panagakos, MS Diaz, LT Biegler. <a href="https://doi.org/10.1016/j.compchemeng.2025.109199">Surrogate model optimization: a comparison case study with pooling problems of CO2 point sources</a>. <em>Comp. Chem. Eng.</em>, Vol. 200, 109199, 2025.</li><p></p>
                               
                               <p></p><li>D.M. Fardis, D. Oh, N.V. Sahinidis, A. Garciadiego, A. Lee. <a href="https://doi.org/10.1016/j.compchemeng.2025.109061">Surrogate modeling and optimization of the leaching process in a rare earth elements recovery plant</a>. <em>Comp. Chem. Eng.</em>, Vol. 197, 109061, 2025.</li><p></p>
